# ship-track-estimators

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  main.py  main_alt.py  pyproject.toml  requirements.txt  setup.py
data/historical_ships/: ShipSmoothExams.R  historical_ship_data.csv  pig.csv
data/modern_ships/: GenerateTestTrajectory.R  GenerateTestTrajectoryFromRda.R  WCE5063_subset.csv  WCE5063_subset_downsampled.csv  WCE5063_subset_downsampled_rounded_noisy.csv  analyse_data.ipynb  hourly_sub.Rda  modern_ship_data.csv
examples/: analyse_traj.py  example_gaussian_process.py  example_gaussian_process_batch.py  example_ukf.py  example_ukf_rts_smoother.py  example_ukf_rts_smoother_batch.py  example_ukf_rts_smoother_savgol.py  main.py  main_alt.py  main_metric.py  main_metric_total.py  main_plot.py
examples/cli_example/: analyse_results.py  input.json  matrices.json  original_01203823_track.txt  output_01203823_dts.txt  output_01203823_predictions.txt  output_01203823_predictions_smoothed.txt  output_01203823_variances.txt  output_01203823_variances_smoothed.txt  run.sh
notebooks/: sigma_points.ipynb  track_smoothing.ipynb
notes/: notes_ukf.aux  notes_ukf.tex
r_interface/: README.md  example_ukf.r  example_ukf_rts_smoother.r
src/track_estimators/: __init__.py  constants.py  non_linear_process.py  non_linear_transform.py  performance_metrics.py  ship_track.py  unscented_kf.py  utils.py  version.py
src/track_estimators/cli/: __init__.py  argument_parser.py  json_loader.py  main_cli.py
src/track_estimators/gaussian_processes/: __init__.py  gaussian_process.py  gp.py
src/track_estimators/kalman_filters/: __init__.py  kalman_filter.py  non_linear_process.py  unscented.py
tests/: test_unscented_kf.py  test_utils.py
tmp/: README.md  main.py  unscented_kalman_filter.py  utils.py
unscented_kalman_filter/: README.md  main.py  performance_metrics.py  unscented_kalman_filter.py  utils.py
