[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[options]
install_requires = []

[project]
authors = [{name = "Joao Morado", email = "joao.morado@noc.ac.uk"}]
classifiers = [
  "License :: OSI Approved :: GPL License",
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Oceanography Modeling",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9"
]
description = "A software package designed for estimating historical ship tracks utilising either Kalman filters or Gaussian processes."
dynamic = [
  "version",
  "dependencies"
]
keywords = [
  "Ship tracking",
  "Kalman Filters",
  "Gaussian Processes",
  "Historical Ship Tracks"
]
license = {file = "LICENSE"}
name = "track_estimators"
readme = "README.md"

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov"
]

[project.scripts]
track_estimator = "track_estimators.cli.main_cli:track_estimator"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = false

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: numpy convention
  "D107",
  "D203",
  "D212",
  "D213",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417"
]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools_scm]
write_to = "src/track_estimators/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
